data view container, data flow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import "./styles/Main.css";
 @import "./styles/Profile.css";
 @import "./styles/ShotChart.css";
+@import "./styles/DataViewContainer.css";
 
 body {
   margin: 0;
